syntax = "proto3";

package biconom.types;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "biconom/types/referral_link_policy.proto";

// ReferralLink представляет собой реферальную ссылку, используемую для привлечения новых участников.
message ReferralLink {
    // Тип реферальной ссылки.
    enum Kind {
        KIND_UNSPECIFIED = 0;
        // Персональная: всегда ведет к дистрибьютору, связанному с аккаунтом-владельцем.
        KIND_PERSONAL = 1;
        // Коллективная: использует внутреннюю логику (определяемую политикой) для определения конечного дистрибьютора.
        KIND_COLLECTIVE = 2;
    }

    // Статус жизненного цикла ссылки.
    enum Status {
        STATUS_UNSPECIFIED = 0;
        // Активна и может быть использована для регистрации.
        STATUS_ACTIVE = 1;
        // Неактивна и не может быть использована.
        STATUS_INACTIVE = 2;
    }

    message Id {
        oneof identifier {
            uint64 id = 1;
            string code = 2; // Уникальный код ссылки.
        }
    }

    message List {
        repeated ReferralLink items = 1;
    }

    uint64 id = 1;
    string name = 2; // Имя ссылки, видимое ее создателю.
    string code = 3; // Уникальный код, используемый в URL (например, "REF123XYZ").
    Kind kind = 4; // Тип ссылки (персональная или коллективная).
    Status status = 5; // Статус ссылки (активна/неактивна).
    uint32 account_id = 6; // ID аккаунта, который является создателем и владельцем этой ссылки.

    uint64 trace_id = 7;
    uint32 policy_id = 8; // Политика, управляющая правилами ссылки.
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
    optional google.protobuf.Any additional_data = 11;
}
