syntax = "proto3";

package biconom.types;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// TreePartitionPolicy определяет набор правил для группы партиций дерева.
message TreePartitionPolicy {
	message Id {
		oneof identifier {
			uint32 id = 1;			// Глобальный ID политики
			string name = 2;		// Уникальное имя политики
		}
	}

	message List {
		repeated TreePartitionPolicy items = 1;
	}

	uint32 id = 1;
	string name = 2;				// Уникальное имя политики для идентификации
	string description = 3;			// Описание, поясняющее суть и логику работы политики
	bool is_mergeable = 4;			// Определяет, могут ли партиции, подчиненные этой политике, быть слиты с другими. false - аналог "Standalone".
	
	uint64 trace_id = 5;
	google.protobuf.Timestamp created_at = 6;
	google.protobuf.Timestamp updated_at = 7;
	optional google.protobuf.Any additional_data = 8;
}
